Fixes #6. uuids, tokens ans passwords in vars files

--- a/roles/arvados-sso/templates/application.j2
+++ b/roles/arvados-sso/templates/application.j2
@@ -11,8 +11,8 @@
 # 5. Section in application.default.yml called "common"
 
 common:
-  uuid_prefix: {{ uuid_prefix_sso.stdout_lines[0] }}
-  secret_token: {{ secret_token_sso.stdout_lines[0] }}
+  uuid_prefix: {{ uuid_prefix_sso }}
+  secret_token: {{ secret_token_sso }}
 
   # The site name that will be used in text such as "Sign in to site_title"
   site_title: Arvados
