--- a/roles/arvados-sso/templates/new_client.j2
+++ b/roles/arvados-sso/templates/new_client.j2
@@ -1,5 +1,7 @@
-c = Client.new
-c.name = "{{ app_name }}"
-c.app_id = "{{ app_id }}"
-c.app_secret = "{{ app_secret }}"
-c.save!
+task :new_client => :production do
+    c = Client.new
+    c.name = "{{ app_name }}"
+    c.app_id = "{{ app_id }}"
+    c.app_secret = "{{ app_secret }}"
+    c.save!
+end
