Add RVM path to passenger_ruby

--- a/roles/arvados-sso/templates/nginx.j2
+++ b/roles/arvados-sso/templates/nginx.j2
@@ -78,7 +78,7 @@ http {
 
       passenger_enabled on;
       # If you're not using RVM, comment out the line below.
-      # passenger_ruby /usr/local/rvm/wrappers/default/ruby;
+      passenger_ruby /usr/local/rvm/wrappers/ruby-2.1.3/ruby;
     }
 
     upstream sso {
