--- a/roles/arvados-api/templates/application.j2
+++ b/roles/arvados-api/templates/application.j2
@@ -10,63 +10,39 @@
 # 4. Section in application.default.yml corresponding to RAILS_ENV
 # 5. Section in application.default.yml called "common"
 
+production:
+  # Mandatory site configuration.  See application.default.yml and
+  # http://http://doc.arvados.org/install/install-api-server.html#configure_application
+  # for more information.
+  uuid_prefix: {{ uuid_prefix }}
+  secret_token: {{ secret_token }}
+  blob_signing_key: {{ blob_signing_key }}
+  sso_app_secret: {{ app_secret }}
+  sso_app_id: {{ app_id }}
+  sso_provider_url: https://sso
+  workbench_address: https://sso
+  websocket_address: https://sso
+  #git_repositories_dir: ~
+  #git_internal_dir: ~
+
+development:
+  # Separate settings for development configuration.
+  uuid_prefix: {{ uuid_prefix }}
+  secret_token: {{ secret_token }}
+  blob_signing_key: {{ blob_signing_key }}
+  sso_app_secret: {{ app_secret }}
+  sso_app_id: {{ app_id }}
+  sso_provider_url: https://sso
+  workbench_address: https://sso
+  websocket_address: https://sso
+  #git_repositories_dir: ~
+  #git_internal_dir: ~
+
+test:
+  # Tests should be able to run without further configuration, but if you do
+  # want to change your local test configuration, this is where to do it.
+
 common:
-  uuid_prefix: {{ uuid_prefix_sso }}
-  secret_token: {{ secret_token_sso }}
-
-  # The site name that will be used in text such as "Sign in to site_title"
-  site_title: Arvados
-
-  # After logging in, the title and URL of the link that will be presented to
-  # the user as the default destination on the welcome page.
-  default_link_title: Arvados
-  default_link_url: "http://localhost:3000"
-
-  ###
-  ### Local account configuration.  This is enabled if neither
-  ### google_oauth2 or LDAP are enabled below.
-  ###
-  # If true, allow new creation of new accounts in the SSO server's internal
-  # user database.
-  allow_account_registration: false
-
-  # If true, send an email confirmation before activating new accounts in the
-  # SSO server's internal user database.
-  require_email_confirmation: false
-
-
-  ###
-  ### Google+ OAuth2 authentication.
-  ###
-  # Google API tokens required for OAuth2 login.
-  #
-  # See https://github.com/zquestz/omniauth-google-oauth2
-  #
-  # and https://developers.google.com/accounts/docs/OAuth2
-  google_oauth2_client_id: false
-  google_oauth2_client_secret: false
-
-  # Set this to your OpenId 2.0 realm to enable migration from Google OpenId
-  # 2.0 to Google OAuth2 OpenId Connect (Google will provide OpenId 2.0 user
-  # identifiers via the openid.realm parameter in the OAuth2 flow until 2017).
-  google_openid_realm: false
-
-
-  ###
-  ### LDAP authentication.
-  ###
-  #
-  # If you want to use LDAP, you need to provide
-  # the following set of fields under the use_ldap key.
-  #
-  # use_ldap: false
-  #   title: Example LDAP
-  #   host: ldap.example.com
-  #   port: 636
-  #   method: ssl
-  #   base: "ou=Users, dc=example, dc=com"
-  #   uid: uid
-  #   email_domain: example.com
-  #   #bind_dn: "some_user"
-  #   #password: "some_password"
-  use_ldap: false
+  # Settings in this section will be used in all environments
+  # (development, production, test) except when overridden in the
+  # environment-specific sections above.
