--- a/roles/arvados-api/templates/database.j2
+++ b/roles/arvados-api/templates/database.j2
@@ -1,29 +1,26 @@
-production:
-  adapter: postgresql
-  encoding: utf8
-  database: arvados_sso_production
-  username: arvados_sso
-  password: {{ db_password }}
-  host: localhost
-  template: template0
-
 development:
   adapter: postgresql
-  encoding: utf8
-  database: arvados_sso_development
-  username: arvados_sso
-  password: xxxxxxxx
-  host: localhost
   template: template0
+  encoding: utf8
+  database: arvados_development
+  username: arvados
+  password: {{ db_password }}
+  host: localhost
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  encoding: utf8
-  database: arvados_sso_test
-  username: arvados_sso
-  password: xxxxxxxx
-  host: localhost
   template: template0
+  encoding: utf8
+  database: arvados_test
+  username: arvados
+  password: {{ db_password }}
+  host: localhost
+
+production:
+  adapter: postgresql
+  template: template0
+  encoding: utf8
+  database: arvados_production
+  username: arvados
+  password: {{ db_password }}
+  host: localhost
